Proyecto1-comp2/src/main/java/Backend/antlr/ZetarianoParser.java
// Generated from Zetariano.g4 by ANTLR 4.13.1
package Backend.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ZetarianoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KW_PUBLIC=1, KW_PRIVATE=2, KW_CLASS=3, KW_VOID=4, KW_INT=5, KW_DOUBLE=6, 
		KW_CHAR=7, KW_BOOLEAN=8, KW_STRING=9, KW_IF=10, KW_ELSE=11, KW_SWITCH=12, 
		KW_CASE=13, KW_DEFAULT=14, KW_FOR=15, KW_WHILE=16, KW_DO=17, KW_BREAK=18, 
		KW_CONTINUE=19, KW_RETURN=20, KW_NEW=21, KW_THIS=22, KW_TRUE=23, KW_FALSE=24, 
		KW_NULL=25, KW_PRINTLN=26, KW_PRINT=27, KW_READLN=28, ADD_ASSIGN=29, SUB_ASSIGN=30, 
		MUL_ASSIGN=31, DIV_ASSIGN=32, MOD_ASSIGN=33, EQ=34, NEQ=35, LE=36, GE=37, 
		LT=38, GT=39, AND=40, OR=41, BANG=42, INC=43, DEC=44, PLUS=45, MINUS=46, 
		STAR=47, SLASH=48, MOD=49, ASSIGN=50, QUESTION=51, COLON=52, SEMI=53, 
		COMMA=54, DOT=55, LPAREN=56, RPAREN=57, LBRACE=58, RBRACE=59, LBRACKET=60, 
		RBRACKET=61, DECIMAL_LIT=62, ENTERO_LIT=63, STRING_LIT=64, CHAR_LIT=65, 
		ID=66, LINE_COMMENT=67, BLOCK_COMMENT=68, WS=69;
	public static final int
		RULE_programa = 0, RULE_definicionClase = 1, RULE_miembroClase = 2, RULE_declaracionCampo = 3, 
		RULE_definicionConstructor = 4, RULE_definicionMetodo = 5, RULE_modificadorAcceso = 6, 
		RULE_tipoRetorno = 7, RULE_tipo = 8, RULE_tipoBasico = 9, RULE_dimensionesTipo = 10, 
		RULE_listaParametros = 11, RULE_parametro = 12, RULE_bloque = 13, RULE_instruccion = 14, 
		RULE_declaracionVariableLocal = 15, RULE_listaDeclaradoresVariable = 16, 
		RULE_declaradorVariable = 17, RULE_inicializador = 18, RULE_literalArreglo = 19, 
		RULE_instruccionIf = 20, RULE_instruccionSwitch = 21, RULE_bloqueSwitch = 22, 
		RULE_etiquetaSwitch = 23, RULE_instruccionFor = 24, RULE_forInit = 25, 
		RULE_forUpdate = 26, RULE_listaExpresiones = 27, RULE_instruccionWhile = 28, 
		RULE_instruccionDoWhile = 29, RULE_instruccionBreak = 30, RULE_instruccionContinue = 31, 
		RULE_instruccionReturn = 32, RULE_instruccionExpresion = 33, RULE_expresion = 34, 
		RULE_dimensionArregloNueva = 35, RULE_llamadaSistema = 36, RULE_listaArgumentos = 37, 
		RULE_literal = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "definicionClase", "miembroClase", "declaracionCampo", "definicionConstructor", 
			"definicionMetodo", "modificadorAcceso", "tipoRetorno", "tipo", "tipoBasico", 
			"dimensionesTipo", "listaParametros", "parametro", "bloque", "instruccion", 
			"declaracionVariableLocal", "listaDeclaradoresVariable", "declaradorVariable", 
			"inicializador", "literalArreglo", "instruccionIf", "instruccionSwitch", 
			"bloqueSwitch", "etiquetaSwitch", "instruccionFor", "forInit", "forUpdate", 
			"listaExpresiones", "instruccionWhile", "instruccionDoWhile", "instruccionBreak", 
			"instruccionContinue", "instruccionReturn", "instruccionExpresion", "expresion", 
			"dimensionArregloNueva", "llamadaSistema", "listaArgumentos", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'public'", "'private'", "'class'", "'void'", "'int'", "'double'", 
			"'char'", "'boolean'", "'String'", "'if'", "'else'", "'switch'", "'case'", 
			"'default'", "'for'", "'while'", "'do'", "'break'", "'continue'", "'return'", 
			"'new'", "'this'", "'true'", "'false'", "'null'", "'println'", "'print'", 
			"'readln'", "'+='", "'-='", "'*='", "'/='", "'%='", "'=='", "'!='", "'<='", 
			"'>='", "'<'", "'>'", "'&&'", "'||'", "'!'", "'++'", "'--'", "'+'", "'-'", 
			"'*'", "'/'", "'%'", "'='", "'?'", "':'", "';'", "','", "'.'", "'('", 
			"')'", "'{'", "'}'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "KW_PUBLIC", "KW_PRIVATE", "KW_CLASS", "KW_VOID", "KW_INT", "KW_DOUBLE", 
			"KW_CHAR", "KW_BOOLEAN", "KW_STRING", "KW_IF", "KW_ELSE", "KW_SWITCH", 
			"KW_CASE", "KW_DEFAULT", "KW_FOR", "KW_WHILE", "KW_DO", "KW_BREAK", "KW_CONTINUE", 
			"KW_RETURN", "KW_NEW", "KW_THIS", "KW_TRUE", "KW_FALSE", "KW_NULL", "KW_PRINTLN", 
			"KW_PRINT", "KW_READLN", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", 
			"MOD_ASSIGN", "EQ", "NEQ", "LE", "GE", "LT", "GT", "AND", "OR", "BANG", 
			"INC", "DEC", "PLUS", "MINUS", "STAR", "SLASH", "MOD", "ASSIGN", "QUESTION", 
			"COLON", "SEMI", "COMMA", "DOT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
			"LBRACKET", "RBRACKET", "DECIMAL_LIT", "ENTERO_LIT", "STRING_LIT", "CHAR_LIT", 
			"ID", "LINE_COMMENT", "BLOCK_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Zetariano.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ZetarianoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public DefinicionClaseContext definicionClase() {
			return getRuleContext(DefinicionClaseContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ZetarianoParser.EOF, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoVisitor ) return ((ZetarianoVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			definicionClase();
			setState(79);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinicionClaseContext extends ParserRuleContext {
		public TerminalNode KW_CLASS() { return getToken(ZetarianoParser.KW_CLASS, 0); }
		public TerminalNode ID() { return getToken(ZetarianoParser.ID, 0); }
		public TerminalNode LBRACE() { return getToken(ZetarianoParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(ZetarianoParser.RBRACE, 0); }
		public TerminalNode KW_PUBLIC() { return getToken(ZetarianoParser.KW_PUBLIC, 0); }
		public List<MiembroClaseContext> miembroClase() {
			return getRuleContexts(MiembroClaseContext.class);
		}
		public MiembroClaseContext miembroClase(int i) {
			return getRuleContext(MiembroClaseContext.class,i);
		}
		public DefinicionClaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicionClase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).enterDefinicionClase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).exitDefinicionClase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoVisitor ) return ((ZetarianoVisitor<? extends T>)visitor).visitDefinicionClase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinicionClaseContext definicionClase() throws RecognitionException {
		DefinicionClaseContext _localctx = new DefinicionClaseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definicionClase);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_PUBLIC) {
				{
				setState(81);
				match(KW_PUBLIC);
				}
			}

			setState(84);
			match(KW_CLASS);
			setState(85);
			match(ID);
			setState(86);
			match(LBRACE);
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 9007199254742006L) != 0) || _la==ID) {
				{
				{
				setState(87);
				miembroClase();
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(93);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MiembroClaseContext extends ParserRuleContext {
		public DeclaracionCampoContext declaracionCampo() {
			return getRuleContext(DeclaracionCampoContext.class,0);
		}
		public DefinicionConstructorContext definicionConstructor() {
			return getRuleContext(DefinicionConstructorContext.class,0);
		}
		public DefinicionMetodoContext definicionMetodo() {
			return getRuleContext(DefinicionMetodoContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(ZetarianoParser.SEMI, 0); }
		public MiembroClaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_miembroClase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).enterMiembroClase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).exitMiembroClase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoVisitor ) return ((ZetarianoVisitor<? extends T>)visitor).visitMiembroClase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MiembroClaseContext miembroClase() throws RecognitionException {
		MiembroClaseContext _localctx = new MiembroClaseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_miembroClase);
		try {
			setState(99);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				declaracionCampo();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				definicionConstructor();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(97);
				definicionMetodo();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(98);
				match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionCampoContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ID() { return getToken(ZetarianoParser.ID, 0); }
		public TerminalNode SEMI() { return getToken(ZetarianoParser.SEMI, 0); }
		public ModificadorAccesoContext modificadorAcceso() {
			return getRuleContext(ModificadorAccesoContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(ZetarianoParser.ASSIGN, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public LiteralArregloContext literalArreglo() {
			return getRuleContext(LiteralArregloContext.class,0);
		}
		public DeclaracionCampoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionCampo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).enterDeclaracionCampo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).exitDeclaracionCampo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoVisitor ) return ((ZetarianoVisitor<? extends T>)visitor).visitDeclaracionCampo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionCampoContext declaracionCampo() throws RecognitionException {
		DeclaracionCampoContext _localctx = new DeclaracionCampoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracionCampo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_PUBLIC || _la==KW_PRIVATE) {
				{
				setState(101);
				modificadorAcceso();
				}
			}

			setState(104);
			tipo();
			setState(105);
			match(ID);
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(106);
				match(ASSIGN);
				setState(109);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(107);
					expresion(0);
					}
					break;
				case 2:
					{
					setState(108);
					literalArreglo();
					}
					break;
				}
				}
			}

			setState(113);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinicionConstructorContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ZetarianoParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(ZetarianoParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(ZetarianoParser.RPAREN, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public ModificadorAccesoContext modificadorAcceso() {
			return getRuleContext(ModificadorAccesoContext.class,0);
		}
		public ListaParametrosContext listaParametros() {
			return getRuleContext(ListaParametrosContext.class,0);
		}
		public DefinicionConstructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicionConstructor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).enterDefinicionConstructor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).exitDefinicionConstructor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoVisitor ) return ((ZetarianoVisitor<? extends T>)visitor).visitDefinicionConstructor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinicionConstructorContext definicionConstructor() throws RecognitionException {
		DefinicionConstructorContext _localctx = new DefinicionConstructorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_definicionConstructor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_PUBLIC || _la==KW_PRIVATE) {
				{
				setState(115);
				modificadorAcceso();
				}
			}

			setState(118);
			match(ID);
			setState(119);
			match(LPAREN);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 5)) & ~0x3f) == 0 && ((1L << (_la - 5)) & 2305843009213693983L) != 0)) {
				{
				setState(120);
				listaParametros();
				}
			}

			setState(123);
			match(RPAREN);
			setState(124);
			bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinicionMetodoContext extends ParserRuleContext {
		public TipoRetornoContext tipoRetorno() {
			return getRuleContext(TipoRetornoContext.class,0);
		}
		public TerminalNode ID() { return getToken(ZetarianoParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(ZetarianoParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(ZetarianoParser.RPAREN, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public ModificadorAccesoContext modificadorAcceso() {
			return getRuleContext(ModificadorAccesoContext.class,0);
		}
		public ListaParametrosContext listaParametros() {
			return getRuleContext(ListaParametrosContext.class,0);
		}
		public DefinicionMetodoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicionMetodo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).enterDefinicionMetodo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).exitDefinicionMetodo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoVisitor ) return ((ZetarianoVisitor<? extends T>)visitor).visitDefinicionMetodo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinicionMetodoContext definicionMetodo() throws RecognitionException {
		DefinicionMetodoContext _localctx = new DefinicionMetodoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_definicionMetodo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_PUBLIC || _la==KW_PRIVATE) {
				{
				setState(126);
				modificadorAcceso();
				}
			}

			setState(129);
			tipoRetorno();
			setState(130);
			match(ID);
			setState(131);
			match(LPAREN);
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 5)) & ~0x3f) == 0 && ((1L << (_la - 5)) & 2305843009213693983L) != 0)) {
				{
				setState(132);
				listaParametros();
				}
			}

			setState(135);
			match(RPAREN);
			setState(136);
			bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModificadorAccesoContext extends ParserRuleContext {
		public TerminalNode KW_PUBLIC() { return getToken(ZetarianoParser.KW_PUBLIC, 0); }
		public TerminalNode KW_PRIVATE() { return getToken(ZetarianoParser.KW_PRIVATE, 0); }
		public ModificadorAccesoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modificadorAcceso; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).enterModificadorAcceso(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).exitModificadorAcceso(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoVisitor ) return ((ZetarianoVisitor<? extends T>)visitor).visitModificadorAcceso(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModificadorAccesoContext modificadorAcceso() throws RecognitionException {
		ModificadorAccesoContext _localctx = new ModificadorAccesoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_modificadorAcceso);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			_la = _input.LA(1);
			if ( !(_la==KW_PUBLIC || _la==KW_PRIVATE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoRetornoContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode KW_VOID() { return getToken(ZetarianoParser.KW_VOID, 0); }
		public TipoRetornoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipoRetorno; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).enterTipoRetorno(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).exitTipoRetorno(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoVisitor ) return ((ZetarianoVisitor<? extends T>)visitor).visitTipoRetorno(this);
			else return visitor.visitChildren(this);
		}
	}
